# eulogy

./: .gitignore  Cargo.toml  README.md
eulogy-derive/: Cargo.toml
eulogy-derive/src/: lib.rs
eulogy-derive/tests/ui/: after_cycle.rs  after_cycle.stderr  after_references_skipped_field.rs  after_references_skipped_field.stderr  after_self_reference.rs  after_self_reference.stderr  enum_after_cross_variant.rs  enum_after_cross_variant.stderr  skip_with_after.rs  skip_with_after.stderr  union_rejected.rs  union_rejected.stderr  unknown_after_field.rs  unknown_after_field.stderr  unknown_eulogy_key.rs  unknown_eulogy_key.stderr
examples/: derive.rs  derive_enum.rs  smol.rs  tokio.rs
examples/library-poc/: README.md
examples/library-poc/session-lib/: Cargo.toml
examples/library-poc/session-lib/src/: lib.rs
examples/library-poc/smol-app/: Cargo.toml
examples/library-poc/smol-app/src/: main.rs
examples/library-poc/tokio-app/: Cargo.toml
examples/library-poc/tokio-app/src/: main.rs
src/: lib.rs  std_impls.rs
tests/: derive_tests.rs  invariant_tests.rs  smol_tests.rs  std_impls_tests.rs  use_case_tests.rs
